// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App removing rendered expression 1`] = `
<Fragment>
  <LoadNamespace(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  >
    <LoadNamespace(FormActions) />
  </LoadNamespace(Form)>
  <Render
    onRender={[Function]}
    parsed="PARSED(test expression)"
  />
</Fragment>
`;

exports[`App removing rendered expression 2`] = `
<Fragment>
  <LoadNamespace(Form)
    expr=""
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
</Fragment>
`;

exports[`App rendering 1`] = `
<Fragment>
  <LoadNamespace(Form)
    expr=""
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
</Fragment>
`;

exports[`App rendering an expression 1`] = `
<Fragment>
  <LoadNamespace(Form)
    expr=""
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
</Fragment>
`;

exports[`App rendering an expression 2`] = `
<Fragment>
  <LoadNamespace(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
  <LoadNamespace(Loader) />
</Fragment>
`;

exports[`App rendering an expression 3`] = `
<Fragment>
  <LoadNamespace(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  >
    <LoadNamespace(FormActions) />
  </LoadNamespace(Form)>
  <Render
    onRender={[Function]}
    parsed="PARSED(test expression)"
  />
</Fragment>
`;

exports[`App rendering image details 1`] = `
<Fragment>
  <LoadNamespace(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  >
    <LoadNamespace(FormActions) />
  </LoadNamespace(Form)>
  <Render
    onRender={[Function]}
    parsed="PARSED(test expression)"
  />
</Fragment>
`;

exports[`App rendering image details 2`] = `
<Fragment>
  <LoadNamespace(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  >
    <LoadNamespace(FormActions)
      imageDetails={
        Object {
          "svg": "test svg content",
        }
      }
    />
  </LoadNamespace(Form)>
  <Render
    onRender={[Function]}
    parsed="PARSED(test expression)"
  />
</Fragment>
`;

exports[`App rendering with an invalid syntax 1`] = `
<Fragment>
  <LoadNamespace(Form)
    expr=""
    onSubmit={[Function]}
    syntax="invalid"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
</Fragment>
`;

exports[`App rendering with an invalid syntax 2`] = `
<Fragment>
  <LoadNamespace(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="invalid"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
  <LoadNamespace(Loader) />
</Fragment>
`;

exports[`App rendering with an invalid syntax 3`] = `
<Fragment>
  <LoadNamespace(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="invalid"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
  <Message
    heading="TRANSLATE(Render Failure)"
    type="error"
  >
    <p>
      <WithMergedOptions(TransComponent)>
        An error occurred while rendering the regular expression.
      </WithMergedOptions(TransComponent)>
    </p>
    <a
      href="#retry"
      onClick={[Function]}
    >
      <WithMergedOptions(TransComponent)>
        Retry
      </WithMergedOptions(TransComponent)>
    </a>
  </Message>
</Fragment>
`;
